--- a/th2.1
+++ b/th2.1
@@ -2,6 +2,7 @@
 <head>
     <script src="https://kit.fontawesome.com/df21082a7b.js" crossorigin="anonymous"></script>
     <style>
+        h2{color: red}
         .nav{
             display:flex;
             background-color: rgb(255, 255, 255);
@@ -17,19 +18,30 @@
             font-size: 15px;
             font-family:Arial;
         }
+        ul{
+            list-style-type: none;
+            padding:0;
+        }
+
+
     </style>
 </head>
 <body>
-    <h2 style="font-family:Arial" >KHÓA HỌC SẮP KHAI GIẢNG</h2>
+    <h2 style="font-family: arial;">|KHÓA HỌC SẮP KHAI GIẢNG</h2>
     <div class="nav">
         <div>
             <img src="https://csc.edu.vn/data/images/slider/lap-trinh/LTV-T3H.png" width="100%" height="50%">
             <b>LẬP TRÌNH VIÊN QUỐC TẾ</b>
             <p>Chương trình đào tạo chuẩn quốc tế và toàn diện. Phù hợp với học sinh tốt nghiệp THPT, sinh viên và người định hướng theo nghề lập trình chuyên nghiệp.</p>
          <ul>
-              <li>Học bổng 15.000.000 VND</li>
-              <li>Khai Giảng: 2/2024</li>
-           <li>Thời lượng: 2-2,5 năm</li>
+            <li class="fa-solid fa-money-bill"></li>
+            Học bổng 15.000.000 VND
+            <li></li>    
+            <li class="fa-solid fa-clock"></li>
+            Khai Giảng: 2/2024
+            <li></li>
+            <i class="fa-solid fa-clock"></i>
+            Thời lượng: 2-2,5 năm
           </ul>
         </div>
         <div>
@@ -37,9 +49,14 @@
             <b>LẬP TRÌNH WEB FULLSTACK</b>
             <p>Khóa học phù hợp với người bắt đầu lập trình hoặc người chuyển nghề. Trang bị từ frontend đến backend, xây dựng website hoàn chỉnh sau khóa học.</p>
          <ul>
-              <li>Ưu đãi giảm 15% học phí</li>
-              <li>Khai giảng: 2/2024</li>
-           <li>Thời lượng: 6 tháng</li>
+            <li class="fa-solid fa-money-bill"></li>
+              Ưu đãi giảm 15% học phí
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+              Khai giảng: 2/2024
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+           Thời lượng: 6 tháng
           </ul>
         </div>
         <div>
@@ -47,9 +64,14 @@
             <b>LẬP TRÌNH JAVA FULLSTACK</b>
             <p>Phát triển ứng dụng web từ cơ bản đến nâng cao bằng Java, các ứng dụng doanh nghiệp sử dụng J2EE, Servlet, JSP, Spring Framework, EJB....</p>
          <ul>
-              <li>HƯu đãi giảm 15% học phí</li>
-              <li>Khai Giảng: 2/2024</li>
-           <li>Thời lượng: 236 giờ</li>
+            <li class="fa-solid fa-money-bill"></li>
+              Ưu đãi giảm 15% học phí
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+              Khai Giảng: 2/2024
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+           Thời lượng: 236 giờ
           </ul>
         </div>
     </div>
@@ -58,10 +80,15 @@
             <img src="https://aptech.vn/wp-content/uploads/2021/05/lap-trinh-php.png.webp" width="100%" height="50%">
             <b>LẬP TRÌNH PHP & LARAVEL</b>
             <p>PHP là một trong các ngôn ngữ thiết kế web mạnh nhất. Khóa học trang bị kỹ năng xây dựng web hoàn chỉnh sử dụng PHP kết hợp Laravel Framework.</p>
-         <ul>
-              <li>Khai giảng: 5/2/2024</li>
-              <li>Học phi 9.600.000 VNĐ</li>
-           <li>Thời lượng: 36 giờ</li>
+         <ul> 
+            <li class="fa-solid fa-clock"></li>
+              Khai giảng: 5/2/2024
+              <li></li>
+              <li class="fa-solid fa-money-bill"></li>
+              Học phi 9.600.000 VNĐ
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+           Thời lượng: 36 giờ
           </ul>
         </div>
         <div>
@@ -69,9 +96,14 @@
             <b>KHÓA HỌC LẬP TRÌNH .NET</b>
             <p>Phát triển ứng dụng web sử dụng nền tảng ASP.NET Core MVC. Để học tốt khóa học yêu cầu học viên đã có kiến thức C# và Frontend.</p>
          <ul>
-              <li>Khai giảng: 2/2024</li>
-              <li>Thời lượng: 40 giờ</li>
-           <li>Học phí: 6.000.000 VNĐ</li>
+            <li class="fa-solid fa-clock"></li>
+              Khai giảng: 2/2024
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+              Thời lượng: 40 giờ
+              <li></li>
+              <li class="fa-solid fa-money-bill"></li>
+              Học phí: 6.000.000 VNĐ
           </ul>
         </div>
         <div>
@@ -79,9 +111,14 @@
             <b>LẬP TRÌNH SQL SERVER</b>
             <p>Trang bị những kiến thức nền tảng vững chắc về SQL Server như các kỹ thuật: lọc dữ liệu, phân tích, thiết kế và quản trị cơ sở dữ liệu...</p>
          <ul>
-              <li>Học bổng 4.500.000 VNĐ</li>
-              <li>Khai Giảng: 2/2024</li>
-           <li>Thời lượng: 30 giờ</li>
+            <li class="fa-solid fa-money-bill"></li>
+              Học bổng 4.500.000 VNĐ
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+              Khai Giảng: 2/2024
+              <li></li>    
+            <li class="fa-solid fa-clock"></li>
+           Thời lượng: 30 giờ
           </ul>
         </div>
     </div>
